Couple copy tweaks and fix that gap in the body  (#31)
* Tweak wording of differences

* Copy tweaks and a layout tweak also

--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -283,7 +283,15 @@ a {
     .title { color:$default-color;}
 }
 
-/* .features-5 == Differences / Differences */
+.details {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  .credit-lifecycle {
+    margin-top: 0px !important;
+  }
+}
+
+/* .features-5 == Details / Gaurantees */
 .features-5 {
   
   .card-body {
